# HTTPFileServer

./: .gitignore  Dockerfile  README.md  Task.md  info.txt  tables.txt
HTTPFileServer/: CMakeLists.txt  HTTPFileServer.cpp  common.h  db_adapter.cpp  db_adapter.h  http_server.cpp  http_server.h  sql_request.cpp  sql_request.h
HTTPFileServer/include/http_server/: http_server.cpp  http_server.h
HTTPFileServer/include/http_server/db_adapter/: db_adapter.cpp  db_adapter.h
